@@ -10,6 +10,7 @@ Changes in JMurmel-1.4.5 relative to JMurmel-1.4.4
  * mlib: added dotted-nthcdr, ldiff, tailp, butlast, nbutlast, adjoin, pushnew
 
  * fixed interpreted "(let () (values 1 2 3) 10)"
+ * fixed control flow & multiple values, e.g. "(if (values 1 2 3) 'yes) ; ==> yes"
  * fixed mlib: in "dotimes" the loopvariable now is bound in the resultform
    even if the countform was an int literal <= 0
 
